--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Nishant4coding.github.io/React-Portfolio",
+  "homepage": "http://Nishant4coding.github.io/My-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
